# app-runner-php

./: apprunner.yaml  index.php  readme.md
.devcontainer/: Dockerfile  devcontainer.json
infra/: .gitignore  Makefile  app.py  cdk.json  pyproject.toml
infra/stack/: app_stack.py
service/: index.php
