[tool.poetry]
name = "infra"
version = "0.0.1"
authors = ["Michael Brewer"]
description = "Infrastructure code for app runner demo"

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-aws-apprunner-alpha = "^2.50.0a0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
